# cpp-magic-ascii-art-creator-team

./: ArgumentsParser.cpp  ArgumentsParser.h  CMakeLists.txt  Parser.cpp  main.cpp
ascii_art_creator/: BmpProcessor.hpp  ImageProcessor.cpp  ImageProcessor.h  JpgProcessor.hpp  PngProcessor.hpp
